--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -2,10 +2,11 @@
 
 <div class="recipes">
   <div class="card" *ngFor="let recipe of recipes">
-    <a routerLink="/recipe/{{recipe.id}}">
-      <h1 class="recipe-text">{{recipe.cuisine}}</h1>
-    </a>
+    <h1 class="recipe-text">{{recipe.title.rendered}}</h1>
     <p class="recipe-text">{{recipe.ingredients}}</p>
     <p>ID: {{recipe.id}}</p>
+    <a routerLink="/recipe/{{recipe.id}}">
+      <h1 class="recipe-text">Detail</h1>
+    </a>
   </div>
 </div>
