--- a/src/app/article-detail/article-detail.component.css
+++ b/src/app/article-detail/article-detail.component.css
@@ -6,12 +6,22 @@
   box-shadow: 1px 8px 20px #888888;
 }
 
-.recipe-title {
+.article-title {
   font-size: 1rem;
   word-wrap: break-word;
 }
 
-.recipe-text {
+.article-text {
   font-size: 1rem;
   word-wrap: break-word;
+}
+
+.article-image {
+  width: 300px;
+  height: auto;
+}
+
+.link-container {
+  display: flex;
+  justify-content: center;
 }
