--- a/src/app/articles/articles.component.css
+++ b/src/app/articles/articles.component.css
@@ -1,6 +1,4 @@
-/* recipesComponent's private CSS styles */
-
-.recipes {
+.articles {
   display: grid;
   grid-template-rows: repeat(auto-fill, minmax(200px, 1fr));
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
@@ -12,14 +10,22 @@
   margin: 2rem;
   border-radius: 1rem;
   box-shadow: 1px 8px 20px #888888;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
-.recipe-title {
+.article-title {
   font-size: 1rem;
   word-wrap: break-word;
 }
 
-.recipe-text {
+.article-text {
   font-size: 1rem;
   word-wrap: break-word;
+}
+
+.actions-container {
+  display: flex;
+  justify-content: space-evenly;
 }
