--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,6 @@
+<app-header></app-header>
 <div class="container">
   <h1>{{title}}</h1>
 
-  <a routerLink="/recipes">Go to recipes overview</a>
+  <a routerLink="/articles">Go to articles overview</a>
 </div>
