--- a/src/styles.css
+++ b/src/styles.css
@@ -1,14 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
 /* Master Styles */
+* {
+  font-family: Arial, Helvetica, sans-serif;
+}
 
 body {
-  margin: 0.5rem;
+  margin: 0;
   padding: 0;
 }
 
 h1 {
   color: #369;
-  font-family: Arial, Helvetica, sans-serif;
+
   font-size: 1rem;
 }
 h2,
@@ -21,12 +24,29 @@ body,
 input[text],
 button {
   color: #888;
-  font-family: Cambria, Georgia;
 }
+
 a {
   cursor: pointer;
-  cursor: hand;
+  color: inherit;
+  font-family: Arial;
+  background-color: #eee;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 4px;
 }
+
+a:hover {
+  background-color: #cfd8dc;
+  color: inherit;
+}
+a:disabled {
+  background-color: #eee;
+  color: #aaa;
+  cursor: auto;
+}
+
+/*
 button {
   font-family: Arial;
   background-color: #eee;
@@ -44,16 +64,15 @@ button:disabled {
   color: #aaa;
   cursor: auto;
 }
-
-/* Navigation link styles */
+*/
 nav a {
-  padding: 5px 10px;
+  padding: 1rem 1.5rem;
   text-decoration: none;
-  margin-right: 10px;
-  margin-top: 10px;
+  margin-right: 0.5rem;
+  margin-top: 0.5rem;
   display: inline-block;
   background-color: #eee;
-  border-radius: 4px;
+  border-radius: 0.5rem;
 }
 nav a:visited,
 a:link {
@@ -65,9 +84,5 @@ nav a:hover {
 }
 nav a.active {
   color: #039be5;
-}
-
-/* everywhere else */
-* {
-  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
 }
