--- a/src/app/recipe-detail/recipe-detail.component.css
+++ b/src/app/recipe-detail/recipe-detail.component.css
@@ -6,22 +6,12 @@
   box-shadow: 1px 8px 20px #888888;
 }
 
-.article-title {
+.recipe-title {
   font-size: 1rem;
   word-wrap: break-word;
 }
 
-.article-text {
+.recipe-text {
   font-size: 1rem;
   word-wrap: break-word;
-}
-
-.article-image {
-  width: 300px;
-  height: auto;
-}
-
-.link-container {
-  display: flex;
-  justify-content: center;
 }
