--- a/src/app/recipes/recipes.component.css
+++ b/src/app/recipes/recipes.component.css
@@ -1,4 +1,6 @@
-.articles {
+/* recipesComponent's private CSS styles */
+
+.recipes {
   display: grid;
   grid-template-rows: repeat(auto-fill, minmax(200px, 1fr));
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
@@ -10,22 +12,14 @@
   margin: 2rem;
   border-radius: 1rem;
   box-shadow: 1px 8px 20px #888888;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
 }
 
-.article-title {
+.recipe-title {
   font-size: 1rem;
   word-wrap: break-word;
 }
 
-.article-text {
+.recipe-text {
   font-size: 1rem;
   word-wrap: break-word;
-}
-
-.actions-container {
-  display: flex;
-  justify-content: space-evenly;
 }
