--- a/src/styles.css
+++ b/src/styles.css
@@ -1,17 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 /* Master Styles */
-* {
-  font-family: Arial, Helvetica, sans-serif;
-}
 
 body {
-  margin: 0;
+  margin: 0.5rem;
   padding: 0;
 }
 
 h1 {
   color: #369;
-
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 1rem;
 }
 h2,
@@ -24,29 +21,12 @@ body,
 input[text],
 button {
   color: #888;
+  font-family: Cambria, Georgia;
 }
-
 a {
   cursor: pointer;
-  color: inherit;
-  font-family: Arial;
-  background-color: #eee;
-  border: none;
-  padding: 5px 10px;
-  border-radius: 4px;
+  cursor: hand;
 }
-
-a:hover {
-  background-color: #cfd8dc;
-  color: inherit;
-}
-a:disabled {
-  background-color: #eee;
-  color: #aaa;
-  cursor: auto;
-}
-
-/*
 button {
   font-family: Arial;
   background-color: #eee;
@@ -64,15 +44,16 @@ button:disabled {
   color: #aaa;
   cursor: auto;
 }
-*/
+
+/* Navigation link styles */
 nav a {
-  padding: 1rem 1.5rem;
+  padding: 5px 10px;
   text-decoration: none;
-  margin-right: 0.5rem;
-  margin-top: 0.5rem;
+  margin-right: 10px;
+  margin-top: 10px;
   display: inline-block;
   background-color: #eee;
-  border-radius: 0.5rem;
+  border-radius: 4px;
 }
 nav a:visited,
 a:link {
@@ -84,5 +65,9 @@ nav a:hover {
 }
 nav a.active {
   color: #039be5;
-  text-align: center;
+}
+
+/* everywhere else */
+* {
+  font-family: Arial, Helvetica, sans-serif;
 }
